--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href = "styles.css">
-    <script  src="app.js" defer></script>
-    <script
-    src="https://code.jquery.com/jquery-3.6.1.js"
-    integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-    crossorigin="anonymous"></script>
-
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script defer src="app.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <title>MARS</title>
 </head>
 <body>
-    <h1>THis is my project 1</h1>
-    
+    <h1>MARS Curiosity rover</h1>
+    <h2>Location: Gale Crater, Mars</h2>
+    <div id ='date'></div>
+    <div id ='max'></div>
+    <div id ='min'></div>
+    <div id ='weather'></div>
 </body>
 </html>
