--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 <body>
     <h1>MARS Curiosity rover</h1>
     <h2>Location: Gale Crater, Mars</h2>
-    <div id ='date'></div>
-    <div id ='max'></div>
-    <div id ='min'></div>
-    <div id ='weather'></div>
+    <div id = 'sol1'>
+        <div id ='sol1date'></div>
+        <div id ='sol1max'></div>
+        <div id ='sol1min'></div>
+        <div id ='sol1weather'></div>
+    </div>
+    <div id = 'sol2'>
+        <div id = "sol2date"></div>
+        <div id = "sol2max"></div>
+        <div id = "sol2min"></div>
+        <div id = "sol2weather"></div>
+    </div>
 </body>
 </html>
