Added radiation level, day2

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <h1>MARS Curiosity rover</h1>
     <h2>Location: Gale Crater, Mars</h2>
+
+    <div id = 'rads'></div>
+
     <div id = 'sol1'>
         <div id ='sol1date'></div>
         <div id ='sol1max'></div>
