--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>MARS Curiosity rover</h1>
     <h2>Location: Gale Crater, Mars</h2>
 
+    <button id ='scrollback'>Go back one day</button>
+
     <div id = 'rads'></div>
 
     <div id = 'sol1'>
