added scroll forward

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <h1>MARS Curiosity rover</h1>
     <h2>Location: Gale Crater, Mars</h2>
 
-    <button id ='scrollback'>Go back one day</button>
+    <div>    
+        <button id ='scrollback'>Go back one sol</button>
+        <button id = 'scrollforward'>Go forward one sol</button>
+    </div>
 
     <div id = 'rads'></div>
 
