scroll buttons work for both rovers simoltaneously

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <button id = 'scrollforward'>Go forward one sol</button>
     </div>
 
+    <div id = 'perserverance'></div>
+
     <div id = 'rads'></div>
 
     <div id = 'sol1'>
