commented out the sol2 stuff

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div id ='sol1min'></div>
         <div id ='sol1weather'></div>
     </div>
-    <div id = 'sol2'>
+    <!-- <div id = 'sol2'>
         <div id = "sol2date"></div>
         <div id = "sol2max"></div>
         <div id = "sol2min"></div>
         <div id = "sol2weather"></div>
-    </div>
+    </div> -->
 </body>
 </html>
