added render_rover function, current_rover variable, and rover buttons, but they don't render anything

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <h1>MARS Curiosity rover</h1>
     <h2>Location: Gale Crater, Mars</h2>
 
-    <div>    
+    <div id = "scrollbuttons">    
         <button id ='scrollback'>Go back one sol</button>
         <button id = 'scrollforward'>Go forward one sol</button>
+    </div>
+    <div id = "roverbuttons">
+        <button id = "p_rover_button">Perserverance</button>
+        <button id = "c_rover_button">Curiosity</button>
     </div>
 
     <div id = 'perserverance'></div>
