--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id ='sol1date'></div>
         <div id ='sol1max'></div>
         <div id ='sol1min'></div>
-        <div id ='sol1weather'></div>
+        <div id ='sol1pressure'></div>
     </div>
     <!-- <div id = 'sol2'>
         <div id = "sol2date"></div>
