added insight button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id = "roverbuttons">
         <button id = "p_rover_button">Perserverance</button>
         <button id = "c_rover_button">Curiosity</button>
+        <button id = "i_rover_button">InSight</button>
     </div>
 
     <div id = 'perserverance'></div>
