render the name of the rover to h1 and location to h2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>MARS</title>
 </head>
 <body>
-    <h1>MARS Curiosity rover</h1>
+    <h1>MARS</h1>
     <h2>Location: Gale Crater, Mars</h2>
 
     <div id = "scrollbuttons">    
