--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div id ='sol1min'></div>
         <div id ='sol1pressure'></div>
     </div>
+
+    <blockquote class="imgur-embed-pub" lang="en" data-id="vgqwl3d"><a href="https://imgur.com/vgqwl3d">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+
     <!-- <div id = 'sol2'>
         <div id = "sol2date"></div>
         <div id = "sol2max"></div>
