--- a/index.html
+++ b/index.html
@@ -32,13 +32,8 @@
         <div id ='sol1pressure'></div>
     </div>
 
-    <blockquote class="imgur-embed-pub" lang="en" data-id="vgqwl3d"><a href="https://imgur.com/vgqwl3d">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="vgqwl3d"><a href="https://imgur.com/vgqwl3d">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
+    <img src="https://i.imgur.com/vgqwl3d.jpg">
 
-    <!-- <div id = 'sol2'>
-        <div id = "sol2date"></div>
-        <div id = "sol2max"></div>
-        <div id = "sol2min"></div>
-        <div id = "sol2weather"></div>
-    </div> -->
 </body>
 </html>
