--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </div>
 
     <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="vgqwl3d"><a href="https://imgur.com/vgqwl3d">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
-    <img src="https://i.imgur.com/vgqwl3d.jpg">
-
+    <div id="map_container">    
+        <img src="https://i.imgur.com/vgqwl3d.jpg">
+    </div>
+    
 </body>
 </html>
