--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="vgqwl3d"><a href="https://imgur.com/vgqwl3d">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
     <div id="map_container">    
-        <img src="https://i.imgur.com/vgqwl3d.jpg">
+        <img src="https://i.imgur.com/2qPOsgt.jpg">
     </div>
-    
+
 </body>
 </html>
