added div reticles to map and resized map

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>MARS</title>
 </head>
 <body>
-    <h1>MARS</h1>
+    <h1>MARS!</h1>
     <h2>Location: Gale Crater, Mars</h2>
 
     <div id = "scrollbuttons">    
@@ -32,9 +32,17 @@
         <div id ='sol1pressure'></div>
     </div>
 
-    <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="vgqwl3d"><a href="https://imgur.com/vgqwl3d">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
     <div id="map_container">    
         <img src="https://i.imgur.com/2qPOsgt.jpg">
+        <div id="C">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Crosshairs_Red.svg">
+        </div>
+        <div id="I">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Crosshairs_Red.svg">
+        </div>
+        <div id="P">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Crosshairs_Red.svg">
+        </div>
     </div>
 
 </body>
