--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <div id="map_container">    
         <img src="https://i.imgur.com/2qPOsgt.jpg">
         <div id="C">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Crosshairs_Red.svg">
+            <img src="https://cdn3.iconfinder.com/data/icons/maps-and-navigation-solid-2/48/58-512.png">
         </div>
         <div id="I">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Crosshairs_Red.svg">
+            <img src="https://cdn3.iconfinder.com/data/icons/maps-and-navigation-solid-2/48/58-512.png">
         </div>
         <div id="P">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Crosshairs_Red.svg">
+            <img src="https://cdn3.iconfinder.com/data/icons/maps-and-navigation-solid-2/48/58-512.png">
         </div>
     </div>
 
