--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
     <div id="map_container">    
         <img src="https://i.imgur.com/2qPOsgt.jpg">
-        <div id="C">
+        <div class = "reticle" id="C">
             <img src="https://cdn3.iconfinder.com/data/icons/maps-and-navigation-solid-2/48/58-512.png">
         </div>
-        <div id="I">
+        <div class = "reticle" id="I">
             <img src="https://cdn3.iconfinder.com/data/icons/maps-and-navigation-solid-2/48/58-512.png">
         </div>
-        <div id="P">
+        <div class = "reticle" id="P">
             <img src="https://cdn3.iconfinder.com/data/icons/maps-and-navigation-solid-2/48/58-512.png">
         </div>
     </div>
