--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
         </div>
     </div>
 
+    <div id="model">
+        <!-- <iframe src="https://mars.nasa.gov/gltf_embed/24584" width="100%" height="450px" frameborder="0" /> -->
+    </div>
+
 </body>
 </html>
