--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div id="model">
-        <iframe src="https://mars.nasa.gov/gltf_embed/24584" width="100%" height="400px" frameborder="0" />
+        <!-- <iframe src="https://mars.nasa.gov/gltf_embed/24584" width="100%" height="400px" frameborder="0" /> -->
     </div>
 
 </body>
