removed old buttons

--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
         <button id ='scrollback'>Go back one sol</button>
         <button id = 'scrollforward'>Go forward one sol</button>
     </div>
-    <div id = "roverbuttons">
-        <button id = "p_rover_button">Perserverance</button>
-        <button id = "c_rover_button">Curiosity</button>
-        <button id = "i_rover_button">InSight</button>
-    </div>
 
     <div id = 'rads'></div>
 
@@ -45,9 +40,7 @@
         </div>
     </div>
 
-    <div id="model">
-        <!-- <iframe src="https://mars.nasa.gov/gltf_embed/24584" width="100%" height="400px" frameborder="0" /> -->
-    </div>
+    <div id="model"></div>
 
 </body>
 </html>
