reset sol to 0 each click of rover

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <h1>MARS!</h1>
-    <h2>Location: Gale Crater, Mars</h2>
+    <h2>Click a rover!</h2>
 
-    <div id = "scrollbuttons">    
-        <button id ='scrollback'>Go back one sol</button>
-        <button id = 'scrollforward'>Go forward one sol</button>
-    </div>
 
     <div id = 'rads'></div>
 
     <div id = 'sol1'>
+        <div id = "scrollbuttons">    
+            <button id ='scrollback'>Go back one sol</button>
+            <button id = 'scrollforward'>Go forward one sol</button>
+        </div>
         <div id ='sol1date'></div>
         <div id ='sol1max'></div>
         <div id ='sol1min'></div>
