--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <h1>MARS!</h1>
     <h2>Click a rover!</h2>
 
-
-    <div id = 'rads'></div>
-
     <div id = 'sol1'>
         <div id = "scrollbuttons">    
             <button id ='scrollback'>Go back one sol</button>
@@ -25,6 +22,13 @@
         <div id ='sol1max'></div>
         <div id ='sol1min'></div>
         <div id ='sol1pressure'></div>
+    </div>
+
+    <div id = 'extra'>
+        <div id = "extra1"></div>
+        <div id = "extra2"></div>
+        <div id = "extra3"></div>
+        <div id = "extra4"></div>
     </div>
 
     <div id="map_container">    
