--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
     <h1>MARS!</h1>
     <h2>Click a rover!</h2>
+    <div class="twrap"><div class = "tmove">
+        <div class="titem">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div class="titem"> Nostrum laudantium corrupti minima officiis nesciunt ipsa eum.</div>
+        <div class="titem"> Nostrum laudantium corrupti minima officiis nesciunt ipsa eum.</div>
+        <div class="titem"> Nostrum laudantium corrupti minima officiis nesciunt ipsa eum.</div>
+    </div></div>
 
     <div id = 'sol1'>
         <div id = "scrollbuttons">    
@@ -25,6 +31,7 @@
     </div>
 
     <div id = 'extra'>
+        Additional Weather Information:
         <div id = "extra1"></div>
         <div id = "extra2"></div>
         <div id = "extra3"></div>
