--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1>MARS!</h1>
     <h2>Click a rover!</h2>
     <div class="twrap"><div class = "tmove">
-        <div class="titem 1">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-        <div class="titem 2"> Nostrum laudantium corrupti minima officiis nesciunt ipsa eum.</div>
-        <div class="titem 1"> Nostrum laudantium corrupti minima officiis nesciunt ipsa eum.</div>
-        <div class="titem 2"> Nostrum laudantium corrupti minima officiis nesciunt ipsa eum.</div>
+        <div class="titem 1"></div>
+        <div class="titem 2"></div>
+        <div class="titem 1"></div>
+        <div class="titem 2"></div>
     </div></div>
 
     <div id = 'sol1'>
