added media queries

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
 
     <div id = 'extra'>
         Additional Weather Information:
-        <div id = "extra1"></div>
-        <div id = "extra2"></div>
-        <div id = "extra3"></div>
-        <div id = "extra4"></div>
+        <div id = 'extracontainer'>
+            <div id = "extra1"></div>
+            <div id = "extra2"></div>
+            <div id = "extra3"></div>
+            <div id = "extra4"></div>
+        </div>
     </div>
 
     <div id="map_container">    
