changed color and fixed radiation extra1 color issue

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div id = 'extra'>
-        Additional Weather Information:
+        <span>Additional Weather Information:</span>
         <div id = 'extracontainer'>
             <div class = "data" id = "extra1"></div>
             <div class = "data" id = "extra2"></div>
