--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>MARS!</h1>
+    <h2>By Alec Hannaford</h2>
     <div id = "location">Click a rover!</div>
     <div class="twrap"><div class = "tmove">
         <div class="titem 1"></div>
